# django-habit-tracker-tjaygrantham

./: manage.py  pyproject.toml
core/: forms.py  models.py  views.py
core/migrations/: 0001_initial.py
core/templatetags/: mytags.py
habit_tracker/: settings.py  urls.py
static/css/: style.css
static/js/: show_habit.js
templates/: base.html
templates/core/: add_habit.html  add_record.html  edit_habit.html  home.html  list_habits.html  show_habit.html
